feat: POST /users/random API 구현완료
