# api/swagger.json
@@ -39,6 +39,11 @@
         },
         "/auth/validate": {
             "post": {
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -684,6 +689,33 @@
                     }
                 }
             }
+        },
+        "/users/random": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "새로운 임의 사용자 생성 ✅",
+                "responses": {
+                    "201": {
+                        "description": "성공적으로 임의의 사용자를 생성한 경우",
+                        "schema": {
+                            "$ref": "#/definitions/domain.CreateRandomUserResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -780,6 +812,20 @@
                 },
                 "introduction": {
                     "type": "string"
+                }
+            }
+        },
+        "domain.CreateRandomUserResponse": {
+            "type": "object",
+            "properties": {
+                "biography": {
+                    "type": "string"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "userID": {
+                    "type": "integer"
                 }
             }
         },
